--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+radeon-profile-daemon (0.2.7) bionic; urgency=emergency
+
+  *  Fix build 
+  
+ -- Goran Vidovic (gogo) <trebelnik2@gmail.com>  Thu, 5 Dec 2019 18:00:05 +0100
+
 radeon-profile-daemon (0.2.6) bionic; urgency=emergency
 
   *  New version 
