--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,10 @@
 
+radeon-profile-daemon (0.2.8) bionic; urgency=emergency
+
+  *  Fix build 
+  
+ -- Goran Vidovic (gogo) <trebelnik2@gmail.com>  Fri, 6 Dec 2019 16:20:05 +0100
+
 radeon-profile-daemon (0.2.7) bionic; urgency=emergency
 
   *  Fix build 
